# gpu-scatter-gather

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  FAQ.md  LICENSE-APACHE  NEXT_SESSION_PROMPT.md  PHASE1_IMPLEMENTATION_PROMPT.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.3.0.md  WRITE_COMBINED_MEMORY_EXPERIMENT.md  benchmark_write_combined_file_12char_baseline.json  benchmark_write_combined_file_16char_baseline.json  benchmark_write_combined_vec.json  benchmark_write_combined_vec_16char_baseline.json  build.rs  cbindgen.toml  test_device_enumeration  test_multigpu
docs/: CBINDGEN_SETUP.md  CROSS_VALIDATION_RESULTS.md  DEVELOPMENT_LOG.md  DEVELOPMENT_PROCESS.md  FORMAL_VALIDATION_PLAN.md  INTEGRATION_GUIDE.md  NEXT_SESSION_PROMPT.md  NSIGHT_COMPUTE_SETUP.md  OPTIONAL_ENHANCEMENTS.md  PCIE_BOTTLENECK_ANALYSIS.md  PHASE2_RESULTS.md  PHASE3_KICKOFF.md  PHASE3_OPTIMIZATION_RESULTS.md  PHASE3_SESSION2_SUMMARY.md  PHASE3_SESSION3_SUMMARY.md  PHASE3_SESSION4_PROMPT.md  PUBLICATION_GUIDE.md  README.md  STATISTICAL_VALIDATION.md  TODO.md  WHITEPAPER.md
examples/: benchmark_cracken_comparison.rs  benchmark_hybrid.rs  benchmark_john_pipe.rs  benchmark_multigpu.rs  benchmark_multigpu_async.rs  benchmark_production.rs  benchmark_pure_generation.rs  benchmark_realistic.rs  benchmark_stdout.rs  benchmark_transposed.rs  benchmark_write_combined_file.rs  benchmark_write_combined_vec.rs  cross_validate.rs  poc_accurate.rs  poc_benchmark.rs  profile_12char.rs  profile_transposed.rs  simple_basic.rs  simple_rust_api.rs  test_perf_comparison.rs  test_transpose_perf.rs  validate_gpu.rs
include/: wordlist_generator.h
kernels/: wordlist_poc.cu
results/: benchmark_write_combined_file.json  benchmark_write_combined_file_baseline.json  benchmark_write_combined_vec_12char_baseline.json  benchmark_write_combined_vec_baseline.json  packed_format_2025-11-20.md
scripts/: clean_unicode_for_latex.py  compare_benchmarks.sh  cross_tool_benchmark.sh  generate_whitepaper_pdf.sh  install_test_tools.sh  profile_kernel.sh  (+1 more)
(+81 files in other folders)
