[package]
name = "gpu-scatter-gather"
version = "1.5.0"
edition = "2021"
authors = ["tehw0lf"]
license = "MIT OR Apache-2.0"
description = "World's fastest wordlist generator using GPU acceleration with multi-GPU support"
repository = "https://github.com/tehw0lf/gpu-scatter-gather"
readme = "README.md"
keywords = ["wordlist", "gpu", "cuda", "password", "security"]
categories = ["command-line-utilities", "algorithms"]

[lib]
name = "gpu_scatter_gather"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # cdylib for C library, rlib for Rust

[[bin]]
name = "gpu-scatter-gather"
path = "src/main.rs"

[[bin]]
name = "baseline_benchmark"
path = "benches/scientific/baseline_benchmark.rs"

[[bin]]
name = "validation_suite"
path = "benches/scientific/validation_suite.rs"

[dependencies]
# CUDA runtime bindings
cuda-driver-sys = "0.3"
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
log = "0.4"
env_logger = "0.11"
# Serialization for benchmark results
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Time/date handling for benchmarks
chrono = "0.4"
# Async runtime (for future bindings)
tokio = { version = "1.40", features = ["full"], optional = true }

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# Testing utilities
proptest = "1.5"
# Temporary files for testing
tempfile = "3.12"

[build-dependencies]
# Build script for CUDA kernel compilation
cc = "1.1"
which = "6.0"
cbindgen = "0.26"

[features]
default = []
async = ["tokio"]
network = ["async"]
file = ["async"]

# Optimize for performance in release mode
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Benchmark profile
[profile.bench]
inherits = "release"

# Benchmarks will be added later
# [[bench]]
# name = "cpu_reference"
# harness = false
#
# [[bench]]
# name = "gpu_poc"
# harness = false
